--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <nav>
       <img src="img/Logo.png" class="logo">
       <ul id="sidemenu">
-        <li><a href="#about">Ghost Mode Guide</a></li>
-        <li><a href="#services">KONTOLISM</a></li>
-        <li><a href="#Equalizer">JABOLISM</a></li>
-        <li><a href="#contact">EUTSM</a></li>
+        <li><a href="#Home">Home</a></li>
+        <li><a href="#equalizer">KONTOLISM Clan</a></li>
+        <li><a href="#services">Ghost Mode Guide</a></li>
+        <li><a href="#contact">Contact</a></li>
         <li><a href="#Donatemebkplease">DONATE ME BK PLEASE</a></li>
         <i class="fas fa-times" onclick="closemenu()"></i>
       </ul>
@@ -76,24 +76,30 @@
 <!----------Services---------->
 <div id="services">
   <div class="container">
-    <h1 class="GhostMode">KONTOLISM</h1>
+    <h1 class="GhostMode">Ghost Mode</h1>
     <div class="services-list">
       <div>
         <img src="img/Kontol.png" class="logo">
-        <h2>KONTOLISM SERVICES</h2>
-        <p>Advance Tutorial VIP</p>
+        <h2>What is “Pinpointing”?</h2>
+        <p>Pinpointing is the term used for locating nearby ghost even though you can’t see them
+          "A player that can detect and kill ghosts within half a second after contact is called a Pinpointer, <span>Some players accuse pinpointers as HACKERS/CHEATERS/WALL HACKERS</span> because they can kill a ghost even though its stationary"</p>
         <a href="#">Learn more</a>
       </div>
       <div>
         <img src="img/Kontol.png" class="logo">
-        <h2>KONTOLISM SERVICES</h2>
-        <p>Advance Tutorial VIP</p>
+        <h2>How does a pinpointer find a stationary/moving ghost?</h2>
+        <p>By centering the breath in their headphones, whenever they hear a breath, they tend to look at where they heard the breath (even though the breath is behind a wall, above them or under) and then they will look a bit to the left/right of the breath to further increase the accuracy of their pinpointing<span>-Some pinpointers are passive, they do not engage breath that they think are "Out of range" or they are after a specific nearby breath-
+        </span></p>
         <a href="#">Learn more</a>
       </div>
       <div>
         <img src="img/Kontol.png" class="logo">
-        <h2>KONTOLISM SERVICES</h2>
-        <p>Advance Tutorial VIP</p>
+        <h2>What is their Pinpointing limit?</h2>
+        <p> Pinpointing depends on Environment noise level(Real life or In-game), and their Headset volume
+          Normal pinpointing range is about
+          10Ft (Stationary/Hopping w/o BS)
+          5FT for Hoppers w/ BS (Sometimes when a breath spikes, you can quickly look at where the breath came from and perform a quick pinpointing then kill the ghost. <span>But their sense of sight is second to the most used to pinpoint ghost, even though they can't hear their enemies, when they saw something moved they will shoot any ghost at sight
+          </span></p>
         <a href="#">Learn more</a>
       </div>
     </div>
@@ -102,7 +108,7 @@
 <!----------Equalizer---------->
 <div id="Equalizer">
   <div class="container">
-    <h1>Usefull Software</h1>
+    <h1>Useful Software</h1>
     <div class="equalizer-list">
       <div class="realtek">
         <img src="img/Equalizer.png">
@@ -148,7 +154,7 @@
         <input type="email" name="email" placeholder="Your Email" required>
         <textarea name="Messages" rows="6" placeholder="Your Messages"></textarea>
         <button type="submit" class="btn btn2">submit</button>
-      </form>
+      </form> 
     </div>
   </div>
   <div class="copyright">
