--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
         <p><i class="fa-solid fa-square-phone"></i> 1234567890</p>
         <div class="social-icons">
           <a href="https://facebook.com/"><i class="fa-brands fa-facebook"></i></a>
-          <a href=""><i class="fa-brands fa-discord"></i></a>
-          <a href=""><i class="fa-brands fa-youtube"></i></a>
+          <a href="https://discord.gg/RBSkaQNBWw"><i class="fa-brands fa-discord"></i></a>
+          <a href="https://www.youtube.com/channel/UCuqAraK_Dr-iDjs6pnjpeQA/featured"><i class="fa-brands fa-youtube"></i></a>
         </div>
         <a href="img/Download Guide.pdf" download class="btn btn2">Download Guide</a>
       </div>
